export enum ETaskStatus {
    TODO = "todo",
    DOING = "doing",
    DONE = "done"
}