@startuml
entity Task {
    -id: ObjectID <<generated>>
    --
    ~projectID: ObjectID
    ~linkedTo: ObjectID
    ~assignedTo: ObjectID
    ~createdBy: ObjectID
    ~updatedBy: ObjectID
    --
    *title: String
    *isCreatedByAdmin: Boolean
    +status: ETaskStatus
    +description: String
    +createdAt: Date
    +updatedAt: Date
}
entity Project {
    -id: ObjectID <<generated>>
    --
    ~createdBy: ObjectID
    ~updatedBy: ObjectID
    --
    *title: String
    +description: String
    +createedAt: Date
    +updatedAt: Date
}
entity User {
    -id: ObjectID <<generated>>
    --
    *email: String
    *password: String
    +fullName: String
    +createedAt: Date
    +updatedAt: Date
}
entity ProjectUser {
    -id: ObjectID <<generated>>
    --
    ~projectID: ObjectID
    ~userID: ObjectID
    --
    *role: ERole
}
enum ETaskStatus {
    TODO
    DOING
    DONE
}
enum ERole {
    ADMIN
    USER
}

ProjectUser }o--|| Project 
ProjectUser }o--|| User 
Task ||--o|Task
Task }o--|| User
Task }o--|| Project
ProjectUser -- ERole
Task -- ETaskStatus


@endtuml